crates/batuta-tui/tests/snapshots/picker__onboarding_candidate_100x30.snap
---
source: crates/batuta-tui/tests/picker.rs
expression: candidate
---
"batuta · ws: none ▾ · daemon running · 0 attention                                                  "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions ·┌Workspace not registered────────────────────────────────────────────┐──────────────┐"
"│no sessions — │Name   new-workspace                                                │              │"
"│              │Path   /tmp/new-workspace                                           │              │"
"│              │                                                                    │              │"
"│              │[a] add this directory                                              │              │"
"│              │[w] choose an existing workspace                                    │              │"
"│              │[q] exit                                                            │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[2] Deliver ru│                                                                    │              │"
"│no runs for ba│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[3] Attention │                                                                    │              │"
"│nothing needs │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Esc close                                                                                           "
