crates/batuta-tui/tests/snapshots/picker__onboarding_error_100x30.snap
---
source: crates/batuta-tui/tests/picker.rs
expression: error
---
"batuta · ws: none ▾ · daemon running · 0 attention                                                  "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions ·┌Workspace not registered────────────────────────────────────────────┐──────────────┐"
"│no sessions — │Name   new-workspace                                                │              │"
"│              │Path   /tmp/new-workspace                                           │              │"
"│              │                                                                    │              │"
"│              │[r] refresh                                                         │              │"
"│              │[w] choose an existing workspace                                    │              │"
"│              │[q] exit                                                            │              │"
"│              │registration failed — HTTP 422: invalid root                        │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[2] Deliver ru│                                                                    │              │"
"│no runs for ba│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[3] Attention │                                                                    │              │"
"│nothing needs │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Esc close                                                                                           "
