crates/batuta-tui/tests/snapshots/picker__onboarding_progress_100x30.snap
---
source: crates/batuta-tui/tests/picker.rs
expression: progress
---
"batuta · ws: none ▾ · daemon running · 0 attention                                                  "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions ·┌Add workspace?──────────────────────────────────────────────────────┐──────────────┐"
"│no sessions — │Name   new-workspace                                                │              │"
"│              │Path   /tmp/new-workspace                                           │              │"
"│              │                                                                    │              │"
"│              │… adding workspace                                                  │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[2] Deliver ru│                                                                    │              │"
"│no runs for ba│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[3] Attention │                                                                    │              │"
"│nothing needs │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Esc close                                                                                           "
