crates/batuta-tui/tests/snapshots/picker__onboarding_unsupported_100x30.snap
---
source: crates/batuta-tui/tests/picker.rs
expression: unsupported
---
"batuta · ws: none ▾ · daemon running · 0 attention                                                  "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions ·┌Workspace not registered────────────────────────────────────────────┐──────────────┐"
"│no sessions — │Name   new-workspace                                                │              │"
"│              │Path   /tmp/new-workspace                                           │              │"
"│              │                                                                    │              │"
"│              │[r] refresh                                                         │              │"
"│              │[w] choose an existing workspace                                    │              │"
"│              │[q] exit                                                            │              │"
"│              │This daemon cannot add workspaces through its API. Run: compozy     │              │"
"│              │workspace add /tmp/new-workspace                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[2] Deliver ru│                                                                    │              │"
"│no runs for ba│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[3] Attention │                                                                    │              │"
"│nothing needs │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Esc close                                                                                           "
