crates/batuta-tui/tests/snapshots/picker__picker_empty_100x30.snap
---
source: crates/batuta-tui/tests/picker.rs
expression: screen
---
"batuta · ws: none ▾ · daemon running · 0 attention                                                  "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions ·┌workspaces──────────────────────────────────────────────────────────┐──────────────┐"
"│no sessions — │no workspaces — register one with `compozy workspace add`           │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[2] Deliver ru│                                                                    │              │"
"│no runs for ba│                                                                    │              │"
"└──────────────│                                                                    │              │"
"┌[3] Attention │                                                                    │              │"
"│nothing needs └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Esc close                                                                                           "
