crates/batuta-tui/tests/snapshots/picker__picker_populated_120x40.snap
---
source: crates/batuta-tui/tests/picker.rs
expression: screen120
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                                                 "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                                           "
"┌[1] Sessions · batuta───┌workspaces──────────────────────────────────────────────────────────┐────────────────────────┐"
"│no sessions — press n to│> workspace  /tmp/old                                               │                        │"
"│                        │  next  /tmp/next                                                   │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"└────────────────────────│                                                                    │                        │"
"┌[2] Deliver runs · batut│                                                                    │                        │"
"│no runs for batuta-deliv│                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"└────────────────────────│                                                                    │                        │"
"┌[3] Attention (0)───────│                                                                    │                        │"
"│nothing needs attention │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        └────────────────────────────────────────────────────────────────────┘                        │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"Esc close                                                                                                               "
